fixes for nav menu and lists, hopefully on mobile too

--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,12 @@ text-align: center;
 ul {
 list-style-type: none;
 margin: 0;
+width:100%;
+text-align:center;
 padding: 0;
 overflow: hidden;
 background-color: gray;
+display:inline-block;
 }
 
 #setup ul {
@@ -54,18 +57,21 @@ list-style-type: disc;
 }
 
 li {
-float: left;
+display:inline-block;
+margin:0;
+text-align:center;
+
 }
 li a {
 display:block;
-width: 240px;
+
 text-decoration: none;
 background-color: gray;
 color: black;
 text-align: center;
-padding: 8px;
+padding: 4px 16px;
 font-family: Georgia;
-font-size: 24px;
+font-size: 30px;
 }
 
 #bib a {
@@ -82,6 +88,7 @@ background-color:lightgray;
 
 div.bib {
 text-align: center;
+margin:auto;
 }
 
 #bib ul {
@@ -97,7 +104,8 @@ overflow: visible;
 .biblist li {
 display: list-item;
 font-size: 18px;
-float:none;
+text-align:left;
+margin:auto;
 }
 
 li a.active {
@@ -327,11 +335,23 @@ border:1px solid;
       line-height: 2em;
       word-spacing: 0.26em;
       }
+
  #bib li {
       font-size: 24px;
       line-height: 2em;
       word-spacing: 0.26em;
       }
+ .biblist li {
+     display: list-item;
+     font-size: 24px;
+     float:none;
+ }
+ #bib ul {
+     font-size: 24px;
+      line-height: 2em;
+      word-spacing: 0.26em;
+ }
+
   input[type=text] {
       font-size: 24px;
   }
